--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -45,7 +45,7 @@
 
 
 
-  <div class="relative max-w-3xl mx-auto py-32 px-6 flex flex-col items-center text-center sm:py-64 lg:px-0">
+  <div class="relative max-w-3xl mx-auto py-32 px-6 flex flex-col items-center text-center lg:px-0">
     <h1 class="font-extrabold tracking-tight text-white lg:text-2xl" style="text-shadow: 1px 1px black;">{{ section.settings.heading }}</h1>
     <p class="mt-4 text-xl font-semibold text-white">{{ section.settings.subheading }}</p>
     {% if section.settings.button_label != blank %}
