--- a/sections/main-our-mission.liquid
+++ b/sections/main-our-mission.liquid
@@ -34,7 +34,7 @@
     <!-- Overlapping cards -->
     <section class="-mt-32 max-w-7xl mx-auto relative z-10 pb-32 px-4 sm:px-6 lg:px-8" aria-labelledby="contact-heading">
 
-      <div class="grid grid-cols-1 gap-y-20 lg:grid-cols-3 lg:gap-y-0 lg:gap-x-2">
+      <div class="grid grid-cols-1 gap-y-10 md:grid-cols-3 md:gap-y-0 md:gap-x-2">
         {% for block in section.blocks %}
 
         <a href="{{block.settings.url}}" class="flex flex-col shadow-2xl rounded-md hover:shadow-2xl transition duration-500" style="background-color: {{block.settings.card_color}}">
