--- a/sections/video-banner.liquid
+++ b/sections/video-banner.liquid
@@ -1,10 +1,9 @@
  <!-- Hero section -->
- <div class="relative bg-gray-900 m-auto">
+ <div class="relative bg-gray-900 m-auto ">
     <!-- Decorative image and overlay -->
     
-    <div aria-hidden="true" class="absolute inset-0 bg-gray-900 opacity-60"></div>
   
-    <iframe src="https://www.youtube.com/embed/{{ section.settings.video_url.id }}?enablejsapi=1" class="js-youtube" allow="autoplay; encrypted-media" allowfullscreen title="{{ section.settings.description | escape }}"></iframe>
+    <iframe src="https://www.youtube.com/embed/{{ section.settings.video_url.id }}?enablejsapi=1" class="js-youtube w-full h-full" allow="autoplay; encrypted-media" allowfullscreen title="{{ section.settings.description | escape }}"></iframe>
   
   </div>
   
