push up schema change

--- a/sections/product-bundle.liquid
+++ b/sections/product-bundle.liquid
@@ -213,6 +213,13 @@
                 "label": "Column Width",
                 "info": "Based on the grid layout, specifiy if you want it to span 1 or both columns for full width",
                 "default": 1
+            },
+            {
+              "type": "checkbox",
+              "id": "enable_checkbox",
+              "label": "Switch To Checkbox Style",
+              "info": "Instead of a drop down it'll switch to a multiselect drop down option",
+              "default": false
             }
         ]
     },
